--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -9,14 +9,14 @@ mat-toolbar button {
 .home-container {
     display: grid;
     grid-template-columns: 50% 50%;
-    padding: 20px;
+    padding: 1.5em;
 }
 
 ul li {
     list-style: none;
-    margin-right: 20px;
+    margin-right: 1.5em;
 }
 
 mat-card {
-    margin: 5px 0px;
+    margin: 0.3em 0;
 }
