--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -8,13 +8,13 @@ mat-toolbar button {
 
 .home-container {
     display: grid;
-    grid-template-columns: 50% 50%;
-    padding: 1.5em;
+    grid-template-columns: auto auto;
+    grid-gap: 1em;
+    padding: 1em; 
 }
 
 ul li {
     list-style: none;
-    margin-right: 1.5em;
 }
 
 mat-card {
