--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -8,9 +8,9 @@ mat-toolbar button {
 
 .home-container {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 1em;
-    padding: 1em;
+    padding: 2em;
 }
 
 mat-card {
